# GLider

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.orig  INSTALL.md  LICENSE  PGKBUILD.msys2-mingw  PKGBUILD  PKGBUILD.archlinux  PKGBUILD.msys2-mingw  README.md  _buffer_8hpp.html  _buffer_8hpp.js  _buffer_8hpp_source.html  _frame_rate_8hpp.html  _frame_rate_8hpp_source.html  _g_l_error_handling_8hpp.html  _g_l_error_handling_8hpp.js  _g_l_error_handling_8hpp_source.html  _g_lider_8hpp.html  _g_lider_8hpp.js  _g_lider_8hpp_source.html  _g_lider__core_8hpp.html  _g_lider__core_8hpp.js  _g_lider__core_8hpp_source.html  _main_page_8dox.html  _open_g_l_base_8hpp.html  _open_g_l_base_8hpp.js  _open_g_l_base_8hpp_source.html  _shader_program_8hpp.html  _shader_program_8hpp.js  _shader_program_8hpp_source.html  _vertex_array_8hpp.html  _vertex_array_8hpp.js  _vertex_array_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classgli_1_1_binder-members.html  classgli_1_1_binder.html  (+51 more)
.github/workflows/: c-cpp.yml  publish.yml
Testing/: TAG
Testing/20210817-0301/: Test.xml
cmake/: FindGlad.cmake  GLider.pc.in  GLiderConfig.cmake.in  HermyGLConfig.cmake.in  SDL2ConfigBackup.cmake  cmake_uninstall.cmake.in
debian/: control
docs/: Doxyfile  MainPage.dox  _buffer_8hpp.html  _buffer_8hpp.js  _buffer_8hpp_source.html  _frame_rate_8hpp_source.html  _g_l_error_handling_8hpp.js  _g_lider_8hpp.html  _main_page_8dox.html  _vertex_array_8hpp.html  _vertex_array_8hpp_source.html  _window_8hpp_source.html  classgli_1_1_binder.html  classgli_1_1_buffer.js  classgli_1_1_frame_rate-members.html  classgli_1_1_renderer-members.html  classgli_1_1_shader_program-members.html  classgli_1_1_vertex_array.js  files.html  functions_func.html  functions_vars.html  globals_defs.html  hierarchy.html  index.html  init.dox  namespacegli.html  namespacegli.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  structgli_1_1_layout_element.html
docs/docs/: _buffer_8hpp.html  _buffer_8hpp_source.html  _frame_rate_8hpp.html  _g_l_error_handling_8hpp.html  _g_lider_8hpp.js  _g_lider_8hpp_source.html  _g_lider__core_8hpp.html  _g_lider__core_8hpp_source.html  _window_8hpp.html  annotated.html  classes.html  classgli_1_1_buffer-members.html  classgli_1_1_buffer.html  classgli_1_1_frame_rate.html  classgli_1_1_open_g_l_context.html  classgli_1_1_open_g_l_window-members.html  classgli_1_1_open_g_l_window.html  classgli_1_1_open_g_l_window.js  classgli_1_1_renderer.js  classgli_1_1_vertex_array.html  classgli_1_1_window-members.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b6092855b87fec4f068f27f88b7f0aca.js  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  hierarchy.js  index.html  menudata.js  namespacemembers.html  namespaces_dup.js  navtreeindex0.js  structgli_1_1_layout_element-members.html  structgli_1_1_layout_element.js
docs/docs/search/: all_1.js  all_10.js  all_14.js  all_2.js  all_4.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_5.js  classes_7.js  defines_0.js  defines_2.js  enums_0.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_d.js  files_0.js  files_1.js  (+11 more)
docs/doxygen-custom/: footer.html  header.html
docs/html/: _g_l_error_handling_8hpp_source.html  _g_lider__core_8hpp.js  _main_page_8dox.html  _open_g_l_base_8hpp.html  _open_g_l_base_8hpp.js  _open_g_l_base_8hpp_source.html  _shader_program_8hpp.html  _shader_program_8hpp_source.html  annotated_dup.js  classgli_1_1_binder-members.html  classgli_1_1_open_g_l_context-members.html  classgli_1_1_open_g_l_context.js  classgli_1_1_renderer.html  classgli_1_1_shader_program.html  classgli_1_1_shader_program.js  classgli_1_1_vertex_array-members.html  classgli_1_1_window.html  classgli_1_1_window.js  dir_b6092855b87fec4f068f27f88b7f0aca.html  functions.html  functions_rela.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  navtreedata.js  navtreeindex1.js
docs/search/: all_10.js  all_12.js  all_13.js  all_14.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+40 more)
docs/theme/: custom.css
include/GLider/: Buffer.hpp  FrameRate.hpp  GLErrorHandling.hpp  GLider.hpp  GLider_core.hpp  MainPage.hpp  OpenGLBase.hpp  ShaderProgram.hpp  Shaders.hpp  VertexArray.hpp  Window.hpp
include/HermyGL/: Buffer.hpp  Buffer.inl  FrameRate.hpp  GLErrorHandling.hpp  HermyGL.hpp  HermyGL_core.hpp  HermyGL_export.h  OpenGLBase.hpp  OpenGLBase.inl  OpenGLBuffer.hpp  Shaders.hpp  Shaders.inl  VertexArray.hpp  VertexArray.inl  VertexBuffer.hpp  Window.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+37 more)
src/: Buffer.cpp  CMakeLists.txt  FrameRate.cpp  GLErrorHandling.cpp  GLider.cpp  HermyGL.cpp  HermyGL_core.cpp  OpenGLBase.cpp  OpenGLBuffer.cpp  ShaderProgram.cpp  Shaders.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
test/: CMakeLists.txt  cube.cpp  init.cpp  test.cpp  test1.cpp  test2.cpp  triangle.cpp  util.cpp  util.hpp  window.cpp
test/cmake/: SDL2ConfigBackup.cmake
(+38 files in other folders)
